# python-package-publish

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: bump.yml  lint.yml  on-commit.yml  publish.yml  release.yml  test.yml
docs/: how_to_use_dependency.md  publishing_manually.md
python_package_publish/: __init__.py  client.py  collections.py  errors.py  utils.py
tests/: test_collections.py  test_errors.py  test_utils.py
